fix: 修复云端删除闪退和备份失败清理逻辑
修复了多个与云端删除和备份失败相关的关键问题。

## 主要改动

### 1. 修复删除非0用户备份时的闪退问题
- 在 ListTopBar.kt 的 UserTabs 组件中添加边界检查
- 使用 selectedTabIndex.coerceIn(0, userList.lastIndex.coerceAtLeast(0)) 确保索引不越界
- 修复了删除 user_999 等非0用户备份时的 IndexOutOfBoundsException

### 2. 修复删除后UI状态不同步问题
- 在 ListViewModel.kt 中添加 userIndex 自动重置逻辑
- 当 userIndex 超出 userList 范围时自动重置为 0
- 确保删除最后一个用户的备份后列表自动切换到第一个用户

### 3. 修复S3云端删除逻辑
- 在 AppsRepo.kt 的 deleteCloudApp() 中移除 client.exists() 检查
- S3 没有真正的目录概念,exists() 只能检查单个对象,无法检查'目录'前缀
- 直接调用 deleteRecursively() 使用 ListObjectsV2 + 批量删除处理目录删除
- 同样修改应用到 FilesRepo.kt 的 deleteCloudFile()

### 4. 实现备份失败时的原子性清理
- 在 AbstractBackupService.kt 中添加 onCleanupFailedBackup() 抽象方法
- 在应用级别判断 pkg.isSuccess,失败时调用清理逻辑
- 在 BackupServiceCloudImpl.kt 中实现 onCleanupFailedBackup()
- 使用 deleteRecursively() 删除已上传的部分文件
- 确保备份的原子性:要么全部成功,要么全部失败并清理

## 技术细节

### 删除逻辑优化
- S3 的 deleteRecursively() 使用前缀匹配删除所有对象
- 批量删除 API 一次可删除最多 1000 个对象
- 使用 runCatching 包裹清理操作,避免清理失败影响主流程

### UI 状态管理
- 使用 LaunchedEffect 监听 userList 变化
- 自动调整 userIndex 确保始终指向有效索引
- 避免了手动返回上一级重新进入的操作

## 影响范围
- 应用备份恢复详情页
- 文件备份恢复详情页
- 云端备份服务
- 只影响云端恢复和备份场景,本地逻辑不变

## 测试建议
1. 测试删除非0用户(如 user_999)的备份,验证不再闪退
2. 测试删除最后一个用户的备份,验证列表自动切换
3. 测试备份过程中某个 DataType 失败,验证已上传文件被清理
4. 检查日志确认 deleteRecursively 和清理操作正确执行

---

fix: Fix cloud deletion crashes and backup failure cleanup logic

Fixed multiple critical issues related to cloud deletion and backup failure handling.

## Main Changes

### 1. Fix Crash When Deleting Non-Zero User Backups
- Added boundary check in UserTabs component in ListTopBar.kt
- Use selectedTabIndex.coerceIn(0, userList.lastIndex.coerceAtLeast(0)) to ensure index is within bounds
- Fixed IndexOutOfBoundsException when deleting backups for non-zero users like user_999

### 2. Fix UI State Sync Issue After Deletion
- Added automatic userIndex reset logic in ListViewModel.kt
- Automatically reset userIndex to 0 when it exceeds userList range
- Ensure list automatically switches to first user after deleting la

--- a/source/app/src/main/res/values/strings.xml
+++ b/source/app/src/main/res/values/strings.xml
@@ -420,4 +420,10 @@
     <string name="notification_desc">This is needed to post necessary notifications</string>
     <string name="permission_is_denied">Permission is denied</string>
     <string name="root_denied_msg">Please check your root manager and restart app</string>
+    <string name="s3_setup">S3 Setup</string>
+    <string name="region">Region</string>
+    <string name="access_key_id">Access Key ID</string>
+    <string name="secret_access_key">Secret Access Key</string>
+    <string name="bucket">Bucket</string>
+    <string name="endpoint">Endpoint</string>
 </resources>
