--- a/source/app/src/main/res/values-zh-rCN/strings.xml
+++ b/source/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">数据备份</string>
+    <string name="app_name">数据备份 Revived</string>
     <string name="welcome_to_use">欢迎使用DataBackup</string>
     <string name="update_records">更新记录</string>
     <string name="environment_detection">环境检测</string>
