--- a/source/app/src/main/res/values/strings.xml
+++ b/source/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">DataBackup</string>
+    <string name="app_name">DataBackup Revived</string>
     <string name="welcome_to_use">Welcome to DataBackup</string>
     <string name="update_records">Update records</string>
     <string name="environment_detection">Environment detection</string>
