feat: 优化 S3 上传性能并新增网络类型选择
1. 优化分块上传从串行到并行
   - 实现基于 Channel 的并发上传机制
   - 使用 Kotlin Coroutines Channel 实现生产者-消费者模式
   - 公网环境: 3 个并发上传,预期速度提升 3 倍
   - 内网环境: 8 个并发上传,预期速度提升 8 倍
   - 添加指数级增长的分块策略,优化大文件传输

2. 新增 S3 公网、内网选项
   - 添加 S3NetworkType 枚举 (PUBLIC/PRIVATE)
   - 在 S3 配置页面新增网络类型选择器
   - 根据网络类型自动调整并发参数
   - 更新数据模型和数据库 schema

---

feat: Optimize S3 upload performance and add network type selection

1. Optimize chunked upload from serial to parallel
   - Implement Channel-based concurrent upload mechanism
   - Use Kotlin Coroutines Channel for producer-consumer pattern
   - Public network: 3 concurrent uploads, 3x speed improvement expected
   - Private network: 8 concurrent uploads, 8x speed improvement expected
   - Add exponential growth chunk strategy for large file transfers

2. Add S3 public/private network options
   - Add S3NetworkType enum (PUBLIC/PRIVATE)
   - Add network type selector in S3 configuration page
   - Automatically adjust concurrency parameters based on network type
   - Update data model and database schema

--- a/source/app/src/main/res/values-zh-rCN/strings.xml
+++ b/source/app/src/main/res/values-zh-rCN/strings.xml
@@ -416,4 +416,8 @@
     <string name="endpoint">端点</string>
     <string name="protocol">协议</string>
     <string name="protocol_desc">选择HTTP或HTTPS协议</string>
+    <string name="network_type">网络类型</string>
+    <string name="network_type_desc">正确选择网络类型以获得最佳性能</string>
+    <string name="network_type_public">公网(公有云)</string>
+    <string name="network_type_private">内网(自建S3)</string>
 </resources>
