修复(恢复): 改进 S3 下载进度跟踪和速度显示
- 使用文件大小轮询添加实时下载进度监控
- 实现 HEAD 请求在下载前获取文件总大小
- 在恢复过程中显示实时下载速度和百分比
- 完成时显示平均速度而非 0 Bytes/s
- 过滤零速度更新以防止闪烁
- 使用 coroutineScope 实现正确的结构化并发
- 每 300ms 更新一次进度以保持一致的用户体验

此修复解决了 S3 恢复场景中的三个主要问题:
1. 下载大小一直显示 0 字节直到完成
2. 下载过程中没有实时速度或百分比显示
3. 完成时速度显示 0.00 Bytes/s 而非平均速度

---

fix(restore): improve S3 download progress tracking and speed display

- Add real-time download progress monitoring using file size polling
- Implement HEAD request to retrieve total file size before download
- Display real-time download speed and percentage during restore
- Show average speed on completion instead of 0 Bytes/s
- Filter zero-speed updates to prevent flickering
- Use coroutineScope for proper structured concurrency
- Update progress every 300ms for consistent user experience

This fix addresses three main issues in S3 restore scenarios:
1. Download size was stuck at 0 bytes until completion
2. No real-time speed or percentage display during download
3. Speed showed 0.00 Bytes/s at completion instead of average

--- a/source/app/src/main/res/values-zh-rCN/strings.xml
+++ b/source/app/src/main/res/values-zh-rCN/strings.xml
@@ -420,4 +420,6 @@
     <string name="network_type_desc">正确选择网络类型以获得最佳性能</string>
     <string name="network_type_public">公网(公有云)</string>
     <string name="network_type_private">内网(自建S3)</string>
+    <string name="cancel_backup">取消备份</string>
+    <string name="cancel_restore">取消恢复</string>
 </resources>
